test/containers: New test
So far it only exercises SupportedArguments.

Signed-off-by: Simon McVittie <smcv@collabora.com>
Reviewed-by: Philip Withnall <withnall@endlessm.com>
Bug: https://bugs.freedesktop.org/show_bug.cgi?id=101354

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -181,6 +181,7 @@ installable_helpers += \
 	$(NULL)
 
 installable_tests += \
+	test-containers \
 	test-sd-activation \
 	$(NULL)
 
@@ -285,6 +286,12 @@ test_apparmor_activation_LDADD = \
     $(GLIB_LIBS) \
     $(NULL)
 endif
+
+test_containers_SOURCES = containers.c
+test_containers_LDADD = \
+    libdbus-testutils.la \
+    $(GLIB_LIBS) \
+    $(NULL)
 
 test_corrupt_SOURCES = corrupt.c
 test_corrupt_LDADD = \
