test/message: Add a targeted test for recently-fixed leaks
Signed-off-by: Simon McVittie <smcv@collabora.com>
Reviewed-by: Philip Withnall <withnall@endlessm.com>
Bug: https://bugs.freedesktop.org/show_bug.cgi?id=101568

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -165,6 +165,7 @@ installable_tests += \
 	test-dbus-daemon \
 	test-dbus-daemon-eavesdrop \
 	test-fdpass \
+	test-message \
 	test-monitor \
 	test-loopback \
 	test-marshal \
@@ -327,6 +328,15 @@ endif
 test_marshal_SOURCES = marshal.c
 test_marshal_LDADD = \
     libdbus-testutils.la \
+    $(GLIB_LIBS) \
+    $(NULL)
+
+test_message_SOURCES = \
+    message.c \
+    $(NULL)
+test_message_LDADD = \
+    libdbus-testutils.la \
+    $(top_builddir)/dbus/libdbus-internal.la \
     $(GLIB_LIBS) \
     $(NULL)
 
