--- a/test/name-test/Makefile.am
+++ b/test/name-test/Makefile.am
@@ -28,6 +28,7 @@ TESTS =
 if DBUS_ENABLE_EMBEDDED_TESTS
 if DBUS_UNIX
 AM_TESTS_ENVIRONMENT = \
+        export DBUS_SESSION_BUS_ADDRESS=do-not-use-real-session:; \
         export DBUS_TOP_BUILDDIR=@abs_top_builddir@; \
         export DBUS_TOP_SRCDIR=@abs_top_srcdir@; \
         export PATH="@abs_top_builddir@/bus:$$PATH"; \
@@ -35,7 +36,6 @@ AM_TESTS_ENVIRONMENT = \
         export DBUS_TEST_DATA=@abs_top_builddir@/test/data; \
         export DBUS_TEST_DAEMON=@abs_top_builddir@/bus/dbus-daemon$(EXEEXT); \
         export XDG_RUNTIME_DIR=@abs_top_builddir@/test/XDG_RUNTIME_DIR; \
-        unset DBUS_SESSION_BUS_ADDRESS; \
         unset DBUS_SESSION_BUS_PID; \
         $(NULL)
 
