build: Clean up DBUS_COOKIE_SHA1 keyrings
We use this directory as the temporary home directory.

Fixes: 3f377c511301cfb36bfa93fddf1f59ace8580749
Signed-off-by: Simon McVittie <smcv@debian.org>

--- a/dbus/Makefile.am
+++ b/dbus/Makefile.am
@@ -337,3 +337,6 @@ test_dbus_LDADD = libdbus-internal.la
 
 # Add rules for code-coverage testing, as defined by AX_CODE_COVERAGE
 @CODE_COVERAGE_RULES@
+
+clean-local:
+	$(AM_V_at)rm -fr ./.dbus-keyrings
