--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -114,9 +114,22 @@ dbus_update_activation_environment_SOURCES = \
 	$(NULL)
 dbus_update_activation_environment_LDADD = $(top_builddir)/dbus/libdbus-1.la
 
-EXTRA_DIST = run-with-tmp-session-bus.sh strtoll.c strtoull.c
+if DBUS_WIN
+SUFFIXES = .rc
+
+.rc.o:
+	$(WINDRES) $< -o $@
+
+nodist_dbus_update_activation_environment_SOURCES = disable-uac.rc
+
+disable-uac.rc: Win32.Manifest
+	echo -e "1 24 \"$<\"" > $@
+endif
+
+EXTRA_DIST = run-with-tmp-session-bus.sh strtoll.c strtoull.c Win32.Manifest
 CLEANFILES = 				\
-	run-with-tmp-session-bus.conf
+	run-with-tmp-session-bus.conf \
+	$(nodist_dbus_update_activation_environment_SOURCES)
 
 # create the /var/lib/dbus directory for dbus-uuidgen
 install-data-local:
